# MicroMachine

./: .gitignore  BuildingManager.cpp  BuildingManager.h  CMakeLists.txt  README.md  copy_bot_to_ladder.bat  linux_build.bat  linux_partial_build_debug.bat  linux_partial_build_release.bat  run_ladder_manager.bat
cmake/: FindSC2Api.cmake
custom_maps/: DefeatBunker.SC2Map  DefeatMarines.SC2Map  DefeatPlanetaryFortress.SC2Map  DefeatSpineCrawlers.SC2Map  DefeatWingedZerglings.SC2Map
precompiled_libvoxelbot/include/libvoxelbot/buildorder/: build_order.h  build_state.h  build_time_estimator.h  optimizer.h  tracker.h
precompiled_libvoxelbot/include/libvoxelbot/caching/: dependency_analyzer.h
precompiled_libvoxelbot/include/libvoxelbot/combat/: combat_environment.h  combat_upgrades.h  simulator.h
precompiled_libvoxelbot/include/libvoxelbot/common/: unit_lists.h
precompiled_libvoxelbot/include/libvoxelbot/utilities/: build_state_serialization.h  influence.h  pathfinding.h  predicates.h  profiler.h  renderer.h  sc2_serialization.h  stdutils.h
src/: AlphaBetaAction.cpp  AlphaBetaAction.h  AlphaBetaConsideringDurations.cpp  AlphaBetaConsideringDurations.h  AlphaBetaMove.cpp  AlphaBetaMove.h  AlphaBetaPlayer.cpp  AlphaBetaPlayer.h  AlphaBetaState.cpp  AlphaBetaState.h  AlphaBetaTimeOut.h  AlphaBetaUnit.cpp  AlphaBetaUnit.h  AlphaBetaValue.cpp  AlphaBetaValue.h  AttackFSMState.cpp  BaseLocation.cpp  BaseLocation.h  BaseLocationManager.cpp  BaseLocationManager.h  BotAssert.cpp  BotConfig.cpp  BotConfig.h  BuildOrder.cpp  BuildOrder.h  BuildOrderQueue.cpp  BuildOrderQueue.h  Building.cpp  Building.h  BuildingManager.cpp  BuildingManager.h  BuildingPlacer.cpp  BuildingPlacer.h  CCBot.cpp  CCBot.h  CMakeLists.txt  CombatAnalyzer.cpp  CombatAnalyzer.h  CombatCommander.cpp  CombatCommander.h  (+79 more)
src/libvoxelbot/buildorder/: build_order.cpp  build_order.h  build_state.cpp  build_state.h  build_time_estimator.cpp  build_time_estimator.h  optimizer.cpp  optimizer.h  optimizer.test.cpp  tracker.cpp  tracker.h
src/libvoxelbot/caching/: caching.cpp  dependency_analyzer.cpp
src/libvoxelbot/combat/: combat_environment.cpp  combat_environment.h  combat_upgrades.cpp  simulator.cpp  simulator.h  simulator.test.cpp
src/libvoxelbot/common/: unit_lists.cpp  unit_lists.h
src/libvoxelbot/utilities/: build_state_serialization.h  bump_allocator.h  cereal_json.h  influence.cpp  ladder_interface.h  mappings.cpp  mappings.h  pathfinding.cpp  pathfinding.h  predicates.cpp  profiler.cpp  python_utils.cpp  python_utils.h  sc2_serialization.h  unit_data_caching.cpp  unit_data_caching.h
vs/: CommandCenter.aps  CommandCenter.sln  CommandCenter.vcxproj  CommandCenter.vcxproj.filters
vs/enc_temp_folder/12fdb52ea2a615c0b5cec3a6d1636e98/: StrategyManager.cpp
vs/enc_temp_folder/50167d7f25f06cc35fcc63db16977463/: BuildingPlacer.cpp
vs/enc_temp_folder/95b6603b57d55a6b786c26f26a061/: Util.cpp
